--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "sequelize-typescript": "^2.1.3",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.45",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
